[package]
name = "adbc-spanner-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# Differential/round-trip oracles for the fuzz targets: `regex` gives an independent
# LIKE-semantics reference, `chrono` an independent DATE/TIMESTAMP reference.
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dependencies.adbc-spanner]
path = ".."
default-features = false
features = ["fuzzing"]

# Keep fuzz targets slim and out of the parent package build.
[[bin]]
name = "sql"
path = "fuzz_targets/sql.rs"
test = false
doc = false
bench = false

[[bin]]
name = "values"
path = "fuzz_targets/values.rs"
test = false
doc = false
bench = false

[[bin]]
name = "like"
path = "fuzz_targets/like.rs"
test = false
doc = false
bench = false

[[bin]]
name = "options"
path = "fuzz_targets/options.rs"
test = false
doc = false
bench = false

[[bin]]
name = "keyword"
path = "fuzz_targets/keyword.rs"
test = false
doc = false
bench = false

[[bin]]
name = "params"
path = "fuzz_targets/params.rs"
test = false
doc = false
bench = false

[[bin]]
name = "partition"
path = "fuzz_targets/partition.rs"
test = false
doc = false
bench = false

[workspace]
