[build-system]
# >=77 for the PEP 639 string `license` + `license-files` below; it also vendors
# bdist_wheel, so the separate `wheel` requirement is gone.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "adbc-driver-spanner"
dynamic = ["version"]
description = "ADBC (Arrow Database Connectivity) driver for Google Cloud Spanner"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
# A checked-in copy of the repository's LICENSE (Apache-2.0 §4 requires shipping the
# license text with the wheel, which bundles the compiled driver).
license-files = ["LICENSE"]
authors = [{ name = "Fredrik Fornwall", email = "fredrik@fornwall.net" }]
keywords = ["adbc", "arrow", "spanner", "database", "gcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Database",
]
# >=1.0 covers everything the wrapper uses (AdbcDatabase/dbapi.connect with
# driver/entrypoint, dbapi autocommit) and keeps pip off ancient pre-1.0 releases.
dependencies = ["adbc-driver-manager>=1.0"]

[project.optional-dependencies]
# Arrow result helpers used by the DBAPI layer (fetch_arrow_table/fetch_df).
dbapi = ["pyarrow>=8"]

[project.urls]
Homepage = "https://github.com/fornwall/adbc-spanner"
Repository = "https://github.com/fornwall/adbc-spanner"

[tool.setuptools]
packages = ["adbc_driver_spanner"]

[tool.setuptools.dynamic]
version = { attr = "adbc_driver_spanner._version.__version__" }

[tool.setuptools.package-data]
# The prebuilt shared library is dropped in by CI per platform before the wheel
# is built. py.typed ships the type-hint marker.
adbc_driver_spanner = ["*.so", "*.dylib", "*.dll", "py.typed"]
